Changes for Perl extension Padre-Plugin-FormBuilder

0.04 to be released
	- Updated to Module::Install::DSL 1.04
	- Updated to match changes in FBP::Perl 0.67
	- Auto-detect $VERSION from the project the .fbp file is in
	- Added support for previewing frames without crashing
	- Removed the use of Mouse as it causes reloading problems
	- When in Padre mode use the new Wx::FOO style constants

0.03 Tue 2 Aug 2011
	- Rearranged the codegen options to allow more detailed descriptions
	- Added specific control of internationalisation in generated code
	- Added support for the FPB::Perl i18n_trim option, labelled as
	  "Smart" internationalisation.
	- Updated to match FBP::Perl 0.59

0.02 Mon 18 Jul 2011
	- Allow toggling between pure FBP::Perl and Padre-specific code
	- Add option to generate into a temporary namespace
	- Major reorganisation to act as a permanent dialog

0.01 Fri 26 Jun 2010
	- Creating initial release by forking Padre-Plugin-FormBuilder