@@ -7,6 +7,7 @@ Changes for Perl extension Padre-Plugin-FormBuilder
 	- Added support for previewing frames without crashing
 	- Removed the use of Mouse as it causes reloading problems
 	- When in Padre mode use the new Wx::FOO style constants
+	- Support for generating several files at once into editors
 
 0.03 Tue 2 Aug 2011
 	- Rearranged the codegen options to allow more detailed descriptions
